# nep-141-examples

./: Cargo.toml
basic/: Cargo.toml  README.md  build.sh
basic/res/: fungible_token_basic.wasm
basic/tests/: general.rs
res/: fungible_token.wasm
src/: lib.rs
tests/: general.rs
tests/contracts/compound/: Cargo.toml  build.sh
tests/contracts/compound/src/: lib.rs
tests/contracts/res/: compound.wasm
unsafe-mode/: Cargo.toml  build.sh
unsafe-mode/res/: fungible_token_unsafe_mode.wasm
unsafe-mode/src/: fungible_token_core.rs  storage_manager.rs
unsafe-mode/tests/: general.rs
